--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-plotly.js": "^2.6.0",
     "react-plotlyjs": "^0.4.4",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.56.2",
     "web-vitals": "^2.1.4"
   },
